[package]
name = "loadr-plugin-postgres"
description = "Native protocol plugin: adds PostgreSQL (postgres://) as a loadr load-test target"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_postgres"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
once_cell = "1"
tokio = { version = "1.52", features = ["rt-multi-thread"] }
# The heavy `sqlx` driver lives ONLY in this plugin crate, never in loadr core.
# This plugin enables ONLY the `postgres` feature, so it does NOT pull in
# `sqlx-mysql` (and therefore not its transitive `rsa` dep / RUSTSEC-2023-0071).
# A PostgreSQL-only build is fully advisory-clean. `rustls` TLS avoids a system
# OpenSSL dependency for portable cdylib builds.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "tls-rustls-ring",
] }
